# rust-home-automation

./: Cargo.toml  README.md
src/: lib.rs  main.rs  rules.rs
