[package]
name = "rust-home-automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_weather_information = { version = "0.2.0", git = "https://github.com/Paippi/rust-weather-information"}
ruuviscanner = { version = "0.2.0", git = "https://github.com/Paippi/ruuviscanner.git" }

tokio = { version = "1.28.1", features = ["full"] }
